sudoku-rs/src/solver/strategic/snapshots/sudoku__solver__strategic__tests__snapshots__solve_path_base2_grid_1.snap
---
source: sudoku-rs/src/solver/strategic/mod.rs
expression: output
---
Strategy NakedSingles:
r0c3: set value 3, because of: r0c3: candidate 3
r3c2: set value 3, because of: r3c2: candidate 3
Strategy NakedSingles:
r0c1: set value 2, because of: r0c1: candidate 2
r1c3: set value 1, because of: r1c3: candidate 1
r2c2: set value 1, because of: r2c2: candidate 1
r3c0: set value 4, because of: r3c0: candidate 4
Strategy NakedSingles:
r1c0: set value 3, because of: r1c0: candidate 3
r1c2: set value 2, because of: r1c2: candidate 2
r2c1: set value 3, because of: r2c1: candidate 3
r2c3: set value 4, because of: r2c3: candidate 4
Strategy NakedSingles:
r1c1: set value 4, because of: r1c1: candidate 4
r2c0: set value 2, because of: r2c0: candidate 2
