sudoku-rs/src/solver/strategic/snapshots/sudoku__solver__strategic__tests__snapshots__solve_path_base3_grid_4.snap
---
source: sudoku-rs/src/solver/strategic/mod.rs
expression: output
---
Strategy NakedSingles:
r2c8: set value 5, because of: r2c8: candidate 5
r4c3: set value 5, because of: r4c3: candidate 5
r4c5: set value 9, because of: r4c5: candidate 9
r6c0: set value 2, because of: r6c0: candidate 2
r6c1: set value 8, because of: r6c1: candidate 8
r6c6: set value 3, because of: r6c6: candidate 3
r7c3: set value 2, because of: r7c3: candidate 2
r8c1: set value 4, because of: r8c1: candidate 4
r8c4: set value 9, because of: r8c4: candidate 9
Strategy NakedSingles:
r1c6: set value 6, because of: r1c6: candidate 6
r3c3: set value 6, because of: r3c3: candidate 6
r4c0: set value 4, because of: r4c0: candidate 4
r5c1: set value 6, because of: r5c1: candidate 6
r5c6: set value 4, because of: r5c6: candidate 4
r6c7: set value 1, because of: r6c7: candidate 1
r7c0: set value 9, because of: r7c0: candidate 9
r7c4: set value 1, because of: r7c4: candidate 1
r8c2: set value 7, because of: r8c2: candidate 7
r8c5: set value 3, because of: r8c5: candidate 3
Strategy NakedSingles:
r0c3: set value 3, because of: r0c3: candidate 3
r1c0: set value 3, because of: r1c0: candidate 3
r1c1: set value 1, because of: r1c1: candidate 1
r1c7: set value 2, because of: r1c7: candidate 2
r2c0: set value 6, because of: r2c0: candidate 6
r2c3: set value 4, because of: r2c3: candidate 4
r2c4: set value 8, because of: r2c4: candidate 8
r2c6: set value 9, because of: r2c6: candidate 9
r3c5: set value 8, because of: r3c5: candidate 8
r4c2: set value 1, because of: r4c2: candidate 1
r4c7: set value 7, because of: r4c7: candidate 7
r5c5: set value 2, because of: r5c5: candidate 2
r5c8: set value 3, because of: r5c8: candidate 3
r7c6: set value 7, because of: r7c6: candidate 7
r7c8: set value 4, because of: r7c8: candidate 4
r8c6: set value 5, because of: r8c6: candidate 5
r8c7: set value 6, because of: r8c7: candidate 6
Strategy NakedSingles:
r0c2: set value 8, because of: r0c2: candidate 8
r0c4: set value 2, because of: r0c4: candidate 2
r0c5: set value 6, because of: r0c5: candidate 6
r1c2: set value 4, because of: r1c2: candidate 4
r1c4: set value 5, because of: r1c4: candidate 5
r1c5: set value 7, because of: r1c5: candidate 7
r2c5: set value 1, because of: r2c5: candidate 1
r3c1: set value 5, because of: r3c1: candidate 5
r3c2: set value 3, because of: r3c2: candidate 3
r3c8: set value 1, because of: r3c8: candidate 1
r5c2: set value 9, because of: r5c2: candidate 9
r7c7: set value 8, because of: r7c7: candidate 8
